--- a/package.json
+++ b/package.json
@@ -69,9 +69,9 @@
     "qs": "4.0.0",
     "queryfilter": "0.0.4",
     "range_check": "1.2.0",
-    "react": "^0.13.3",
+    "react": "15.3.2",
     "react-addons-css-transition-group": "15.2.1",
-    "react-alt-text": "^1.1.0",
+    "react-alt-text": "2.0.0",
     "react-color": "2.2.0",
     "react-day-picker": "2.3.3",
     "react-dnd": "2.1.4",
@@ -81,7 +81,7 @@
     "react-redux": "4.4.5",
     "react-router": "2.5.2",
     "react-router-redux": "4.0.5",
-    "react-select": "^0.6.12",
+    "react-select": "1.0.0-beta12",
     "redux": "3.5.2",
     "redux-thunk": "2.1.0",
     "scmp": "1.0.0",
