--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "qs": "4.0.0",
     "queryfilter": "0.0.4",
     "range_check": "1.2.0",
-    "react": "15.3.2",
+    "react": "^15.3.2",
     "react-addons-css-transition-group": "^15.2.1",
     "react-alt-text": "2.0.0",
     "react-color": "2.2.0",
@@ -121,26 +121,26 @@
     ]
   },
   "browserify-shim": {
-    "tinymce": "global:tinymce",
-    "jquery": "global:$",
     "codemirror": "global:CodeMirror",
+    "jquery": "global:$",
+    "tinymce": "global:tinymce",
     "underscore": "global:_"
   },
   "author": "Jed Watson",
   "homepage": "http://keystonejs.com/",
   "license": "MIT",
   "keywords": [
-    "express",
-    "web",
+    "admin",
     "app",
     "cms",
-    "admin",
+    "express",
+    "forms",
     "framework",
-    "mongoose",
     "gui",
+    "mongoose",
     "site",
-    "website",
-    "forms"
+    "web",
+    "website"
   ],
   "readmeFilename": "README.md",
   "gitHead": "ef3fd612285315ea8e12f68da4c8d6031e2c7fe7",
@@ -150,23 +150,23 @@
   "scripts": {
     "build": "NODE_ENV=production node build.js | uglifyjs -mc warnings=false,screw_ie8=true -b beautify=false,semicolons=false > ./admin/public/js/packages.js",
     "build-dev": "node build.js > ./admin/public/js/packages.js",
+    "clean": "rimraf ./coverage",
+    "current": "updtr",
+    "fields-explorer": "node ./fields/explorer/server.js",
+    "lint": "eslint .",
+    "lint-fix": "eslint . --fix",
+    "posttest-cov": "if [ -n \"$CODECLIMATE_REPO_TOKEN\" ]; then codeclimate-test-reporter < coverage/lcov.info; fi",
     "pretest": "npm run lint && node test/pretest.js",
+    "pretest-cov": "npm run clean && npm run lint",
     "test": "mocha",
-    "test-all": "npm test && npm run test-e2e-bg",
-    "test-unit": "node test/pretest.js && mocha",
     "test-admin": "mocha --opts test/mocha-admin.opts",
+    "test-all": "npm test && npm run test-e2e-bg",
+    "test-cov": "istanbul cover ./node_modules/mocha/bin/_mocha",
     "test-e2e": "node test/e2e/server.js --env default --config ./test/e2e/adminUI/nightwatch.json",
     "test-e2e-bg": "node test/e2e/server.js --env default --selenium-in-background --config ./test/e2e/adminUI/nightwatch-no-process.json",
     "test-e2e-saucelabs": "if [ -n \"$SAUCE_ACCESS_KEY\" ]; then node test/e2e/server.js --env saucelabs-travis --config ./test/e2e/adminUI/nightwatch.json; fi",
-    "lint": "eslint .",
-    "lint-fix": "eslint . --fix",
-    "watch": "watch 'clear && npm run lint' lib admin server test",
-    "pretest-cov": "npm run clean && npm run lint",
-    "current": "updtr",
-    "test-cov": "istanbul cover ./node_modules/mocha/bin/_mocha",
-    "posttest-cov": "if [ -n \"$CODECLIMATE_REPO_TOKEN\" ]; then codeclimate-test-reporter < coverage/lcov.info; fi",
-    "clean": "rimraf ./coverage",
-    "fields-explorer": "node ./fields/explorer/server.js"
+    "test-unit": "node test/pretest.js && mocha",
+    "watch": "watch 'clear && npm run lint' lib admin server test"
   },
   "engines": {
     "node": ">= 0.12.0",
